--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/jazminejfox/immersion-2020-10-mvp#readme",
   "dependencies": {
+    "axios": "^0.21.0",
     "express": "^4.17.1",
+    "mysql": "^2.18.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
